manifests/cloudnativemu/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cloudnativemu
  name: cloudnativemu
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: cloudnativemu
  template:
    metadata:
      labels:
        app: cloudnativemu
    spec:
      containers:
        - image: alexb04/cloudnativemu
          name: cloudnativemu
          
          ports:
          - containerPort: 8000

      restartPolicy: Always
