manifests/cloudnativemu/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudnativemu-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: cnmu.alexbissessur.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cloudnativemu
            port: 
              number: 8000
