manifests/cloudnativemu/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cnmu-route
spec:
  entryPoints:
  - websecure
  - web
  routes:
  - kind: Rule
    match: Host(`cloudnativemauritius.com`)
    services:
    - name: cloudnativemu
      port: 80
  tls:
    certResolver: le
